@@ -79,7 +79,7 @@ PTXCONF_HOST_FIGLET=y
 # PTXCONF_HOST_GENEXT2FS is not set
 # PTXCONF_HOST_GENIMAGE is not set
 # PTXCONF_HOST_GENPART is not set
-# PTXCONF_HOST_GETTEXT_DUMMY is not set
+PTXCONF_HOST_GETTEXT_DUMMY=m
 # PTXCONF_HOST_GETTEXT is not set
 PTXCONF_HOST_GLIB=m
 # PTXCONF_HOST_GPERF is not set
@@ -91,6 +91,7 @@ PTXCONF_HOST_IPKG=y
 # PTXCONF_HOST_LIBBZ2 is not set
 # PTXCONF_HOST_LIBCAP is not set
 # PTXCONF_HOST_LIBCONFUSE is not set
+PTXCONF_HOST_LIBFFI=m
 # PTXCONF_HOST_LIBGD is not set
 PTXCONF_HOST_LIBICONV=m
 # PTXCONF_HOST_LIBLZO is not set
@@ -1591,7 +1592,7 @@ PTXCONF_EXPAT=m
 # PTXCONF_LIBELF is not set
 # PTXCONF_LIBEVENT is not set
 # PTXCONF_LIBEZV24 is not set
-# PTXCONF_LIBFFI is not set
+PTXCONF_LIBFFI=m
 # PTXCONF_LIBFTDI is not set
 # PTXCONF_LIBGCRYPT is not set
 # PTXCONF_LIBGD is not set
