@@ -23,6 +23,7 @@ PTXCONF_COLLECTION_MANUAL=y
 PTXCONF_IPKG=y
 # PTXCONF_IWATCHER is not set
 # PTXCONF_LDD is not set
+# PTXCONF_LIBFFI is not set
 # PTXCONF_LIBSIGCPP is not set
 # PTXCONF_LIBUIO is not set
 # PTXCONF_MBREF_UIO is not set
